# midnight-ledger

./: .envrc  .gitignore  .midnight.txt  AGENT.md  CHANGELOG.md  CHANGELOG_base-crypto.md  CHANGELOG_coin-structure.md  CHANGELOG_onchain-runtime.md  CHANGELOG_serialize.md  CHANGELOG_storage.md  CHANGELOG_storage_core.md  CHANGELOG_transient-crypto.md  CHANGELOG_zkir.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  agent.md  bagel.nix  flake.nix  run_it.sh  rustfmt.toml
base-crypto/: Cargo.toml
base-crypto-derive/: Cargo.toml
base-crypto-derive/src/: lib.rs
base-crypto/src/: cost_model.rs  data_provider.rs  ecdsa.rs  hash.rs  lib.rs  repr.rs  rng.rs  schnorr.rs  signatures.rs  time.rs
coin-structure/: Cargo.toml
coin-structure/src/: coin.rs  contract.rs  fab.rs  lib.rs  transfer.rs
generate-cost-model/: Cargo.toml  Dockerfile  README.md  build-docker.sh  run-cost-model-docker.sh
generate-cost-model/src/: vm-cost-model.rs
ledger/: Cargo.toml  dust.compact  key-derivation-test-vectors.json
ledger-ios/: Cargo.toml  build.rs
ledger-ios/src/: addresses.rs  block_context.rs  dust.rs  dust_state.rs  error.rs  events.rs  intent.rs  keys.rs  ledger_ios.udl  ledger_state.rs  lib.rs  parameters.rs  transaction.rs  uniffi_bindgen.rs  unshielded.rs  util.rs  zswap_state.rs
ledger-uniffi/: .gitignore  Cargo.toml  README.md  STATUS.md  cleanup.sh  package-lock.json  run.sh  uniffi-bindgen.rs  uniffi.toml
ledger-uniffi/react-native-ledger-ffi/: .gitignore  package-lock.json  package.json  react-native-ledger-ffi.podspec  react-native.config.js  tsconfig.json
ledger-uniffi/rn-demo-app/: .gitignore  app.json  babel.config.js  download-jna.sh  index.js  package-lock.json  package.json  react-native.config.js  start.sh  tsconfig.json
ledger-uniffi/src/: contract.rs  conversions.rs  crypto.rs  dust.rs  errors.rs  intent.rs  lib.rs  state.rs  transcript.rs  tx.rs  types.rs  unshielded.rs  zswap_keys.rs  zswap_state.rs  zswap_uniffi.rs
ledger-wasm/: .gitignore  Cargo.toml  Readme.md  assemble-dts.js  ledger-v6.template.d.ts  ledger-v7.template.d.ts  ledger-v8.template.d.ts  ledger-v9.template.d.ts  package-lock.json  package.json  tsconfig.json  typedoc.json
ledger-wasm/src/: contract.rs  conversions.rs  crypto.rs  dust.rs  events.rs  intent.rs  lib.rs  state.rs  state_changes.rs  transcript.rs  tx.rs  unshielded.rs  zswap_keys.rs  zswap_state.rs  zswap_wasm.rs
ledger/benches/: benchmarking.rs
ledger/examples/: output-params.rs
ledger/params/: rel-1.1-advisory.json
ledger/src/: annotation.rs  construct.rs  dust.rs  error.rs  events.rs  lib.rs  prefetch.rs  primitive.rs  prior_versions.rs  prove.rs  semantics.rs  structure.rs  test_utilities.rs  tracing.rs  utils.rs  verify.rs  zswap.rs
ledger/tests/: composable-burn.compact  composable-inner.compact  composable-outer.compact  composable-relay.compact  composable.rs  contract_deployment.rs  dust.rs  fallible.compact  fallible.rs  intent.rs  maintenance.rs  malicious_imbalance.rs  micro-dao.compact  micro-dao.rs  noop-dos.rs  simple-merkle-tree.compact  simple-merkle-tree.rs  system_tx.rs  token-vault.compact  token-vault.rs  token_vault_common.rs  token_vault_shielded.rs  token_vault_unshielded.rs
mobile-bench/dioxus-bench/: Cargo.toml  Dioxus.toml
mobile-bench/dioxus-wallet/: Cargo.toml  Dioxus.toml
mobile-bench/prover-core/: Cargo.toml
onchain-runtime/: Cargo.toml  README.md  build.rs  generate-rust-macros.ss
onchain-runtime-wasm/: Cargo.toml  README.md  onchain-runtime-v1.d.ts  onchain-runtime-v2.d.ts  onchain-runtime-v3.d.ts  package-lock.json  package.json  tsconfig.json  typedoc.json
onchain-runtime-wasm/src/: context.rs  conversions.rs  lib.rs  primitives.rs  state.rs  vm.rs
onchain-runtime/benches/: benchmarking.rs
onchain-runtime/src/: context.rs  contract_state_ext.rs  error.rs  lib.rs  main.rs  test_utilities.rs  transcript.rs
onchain-runtime/tests/: vm.rs
onchain-state/: Cargo.toml
onchain-state/src/: lib.rs  state.rs
onchain-vm/: Cargo.toml
onchain-vm/src/: cost_model.rs  error.rs  lib.rs  ops.rs  result_mode.rs  state_value_ext.rs  vm.rs  vm_value.rs
proof-server/: Cargo.toml  README.md  manage-proof-server.sh  midnight-proof-server.service
proof-server/examples/: benchmark_proof_server.rs  send_zswap_proof.rs
proof-server/src/: endpoints.rs  lib.rs  main.rs  versioned_ir.rs  worker_pool.rs
proof-server/tests/: gpu_proof_benchmark.rs  integration_tests.rs
serialize/: Cargo.toml  README.md
serialize-macros/: Cargo.toml
serialize-macros/src/: lib.rs
serialize/src/: deserializable.rs  lib.rs  serializable.rs  tagged.rs  util.rs
serialize/tests/: serialize.rs
storage/: Cargo.toml
storage-core/: Cargo.toml
storage-core/src/: arena.rs  backend.rs  cache.rs  db.rs  gc.rs  lib.rs  storable.rs  storage.rs  stress_test.rs  test.rs
storage-macros/: Cargo.toml
storage-macros/src/: lib.rs
storage-macros/tests/: storable.rs
storage/benches/: benchmarking.rs
storage/examples/: arena-transactions.rs  state-translation.rs
storage/src/: arena.rs  backend.rs  cache.rs  dag_type.rs  db.rs  discovery.rs  lib.rs  merkle_patricia_trie.rs  migration_plan.rs  state_translation.rs  storable.rs  storage.rs  stress_test.rs  test.rs
storage/tests/: deserialize.rs  sp_children.rs  storable_clash.rs
storage/tmp/: read_write_map_loop.10000_1000.1757330135.json  read_write_map_loop.10000_1000.1757330136.json  read_write_map_loop.10000_1000.1757334399.json
storage/tools/: plot.py
transient-crypto/: Cargo.toml
transient-crypto/benches/: benchmarking.rs  merkle_deserialize.rs
transient-crypto/examples/: calibrate.rs  translate-params.rs
transient-crypto/src/: commitment.rs  curve.rs  encryption.rs  fab.rs  hash.rs  lib.rs  (+6 more)
translation-test/: Cargo.toml
v6-to-v7-state-translation/: Cargo.toml
zkir/: Cargo.toml
zkir-v3/: Cargo.toml
zkir-v3-wasm/: Cargo.toml  package-lock.json  package.json  zkir-v3.d.ts
zkir-wasm/: Cargo.toml  package-lock.json  package.json
zswap/: Cargo.toml  key-derivation-test-vectors.json  zswap.compact
(+1414 files in other folders)
