[workspace]
package.license = "Apache-2.0"
package.license-file = "LICENSE"
package.version = "6.1.0-alpha.5"
members = [
    "zswap",
    "ledger",
    "ledger-wasm",
    "proof-server",
    "onchain-runtime",
    "onchain-runtime-wasm",
    "onchain-state",
    "onchain-vm",
    "storage",
    "zkir",
    "zkir-wasm",
    "transient-crypto",
    "base-crypto",
    "base-crypto-derive",
    "coin-structure",
    "serialize",
    "serialize-macros",
    "generate-cost-model",
    "wasm-proving-demos/zkir-mt",
    "static",
    # midnight-zk workspace members
    "midnight-zk/proofs",
    "midnight-zk/curves",
    "midnight-zk/circuits",
    "midnight-zk/aggregator",
]
default-members = [
    "zswap",
    "ledger",
    "onchain-runtime",
    "onchain-state",
    "onchain-vm",
    "storage",
    "zkir",
    "base-crypto",
    "base-crypto-derive",
    "transient-crypto",
    "coin-structure",
    "serialize",
    "serialize-macros",
    "generate-cost-model",
]
resolver = "2"
exclude = [
    "scripts/hardfork_version_patch"
]

# Dependencies needed by midnight-zk workspace members
[workspace.dependencies]
ff = "0.13"
group = "0.13"
halo2curves = { version = "0.7.0", default-features = false }
rand = { version = "0.8" }
rand_core = { version = "0.6", default-features = false }
tracing = "0.1"
blake2b_simd = "1"
rand_chacha = "0.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"]}
serde_derive = { version = "1" }
serde_json = { version = "1" }
num-bigint = { version = "0.4" }
sha2 = "0.10.9"
sha3 = "0.10.8"

# Pretty much every dependency is crypto.
# If there's one thing I know about it, it's that we don't want the molasses
# of unoptimized crypto.
[profile.dev.package."*"]
opt-level = 2
[profile.test.package."*"]
opt-level = 2

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace.metadata.spellcheck]
config = ".spellcheck/cargo-spellcheck.toml"
