[workspace]
package.license = "Apache-2.0"
package.version = "6.2.0-rc.2"
members = [
    "zswap",
    "ledger",
    "ledger-wasm",
    "proof-server",
    "onchain-runtime",
    "onchain-runtime-wasm",
    "onchain-state",
    "onchain-vm",
    "storage",
    "zkir",
    "zkir-v3",
    "zkir-wasm",
    "zkir-v3-wasm",
    "transient-crypto",
    "base-crypto",
    "base-crypto-derive",
    "coin-structure",
    "serialize",
    "serialize-macros",
    "generate-cost-model",
    "wasm-proving-demos/zkir-mt",
    "static",
]
default-members = [
    "zswap",
    "ledger",
    "onchain-runtime",
    "onchain-state",
    "onchain-vm",
    "storage",
    "zkir",
    "base-crypto",
    "base-crypto-derive",
    "transient-crypto",
    "coin-structure",
    "serialize",
    "serialize-macros",
    "generate-cost-model",
]
resolver = "2"
exclude = [
    "scripts/hardfork_version_patch"
]

[patch."https://github.com/midnightntwrk/midnight-zk"]
midnight-curves = { git = "https://www.github.com/midnightntwrk/midnight-zk", tag = "midnight-zk-stdlib-v1.0.0" }
midnight-proofs = { git = "https://www.github.com/midnightntwrk/midnight-zk", tag = "midnight-zk-stdlib-v1.0.0" }
midnight-circuits = { git = "https://www.github.com/midnightntwrk/midnight-zk", tag = "midnight-zk-stdlib-v1.0.0" }
midnight-zk-stdlib = { git = "https://www.github.com/midnightntwrk/midnight-zk", tag = "midnight-zk-stdlib-v1.0.0" }

[patch."https://github.com/midnightntwrk/midnight-zk.git"]
midnight-curves = { git = "https://www.github.com/midnightntwrk/midnight-zk", tag = "midnight-zk-stdlib-v1.0.0" }
midnight-proofs = { git = "https://www.github.com/midnightntwrk/midnight-zk", tag = "midnight-zk-stdlib-v1.0.0" }
midnight-circuits = { git = "https://www.github.com/midnightntwrk/midnight-zk", tag = "midnight-zk-stdlib-v1.0.0" }
midnight-zk-stdlib = { git = "https://www.github.com/midnightntwrk/midnight-zk", tag = "midnight-zk-stdlib-v1.0.0" }

# Pretty much every dependency is crypto.
# If there's one thing I know about it, it's that we don't want the molasses
# of unoptimized crypto.
[profile.dev.package."*"]
opt-level = 2
[profile.test.package."*"]
opt-level = 2

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace.metadata.spellcheck]
config = ".spellcheck/cargo-spellcheck.toml"
