[package]
name = "midnight-base-crypto-derive"
version = "1.0.0-alpha.4"
description = "Derive macros for `midnight-base-crypto`."
edition = "2024"
license.workspace = true
repository = "https://github.com/midnightntwrk/midnight-ledger"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0", features = ["full"] }
quote = "^1.0"
proc-macro2 = "^1.0"
