[package]
name = "midnight-base-crypto-derive"
version = "1.0.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Derive macros for cryptographic representation traits in Midnight's ledger."

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0", features = ["full"] }
quote = "^1.0"
proc-macro2 = "^1.0"
