[package]
name = "midnight-base-crypto"
version = "1.0.0-alpha.4"
edition = "2024"
license.workspace = true

[features]
default = []
proptest = ["dep:proptest", "dep:proptest-derive", "serialize/proptest"]
cli = ["dep:indicatif"]

[dependencies]
derive = { path = "../base-crypto-derive", package = "midnight-base-crypto-derive" }
serialize = { path = "../serialize", package = "midnight-serialize" }

ff = "^0.13.1"
group = "^0.13.0"
anyhow = { version = "^1.0.98" }

# rand 0.9.0 is not yet supported by some of our dependencies, we will
# stick with 0.8.0 for now.
rand = { version = "^0.8.4", features = ["getrandom"] }
lazy_static = "^1.5.0"
const-hex = "^1.14.1"
sha2 = "^0.10.9"
flate2 = "^1.1.2"
k256  = { version = "^0.13.4", features = ["serde"] }
signature = "^2.2.0"
reqwest = { version = "^0.12.22", default-features = false, features = ["rustls-tls-native-roots", "stream"] }
atomic-write-file = { version = "^0.2.3" }
futures = { version = "^0.3.31" }
indicatif = { version = "^0.17.11", optional = true }
tracing = { version = "^0.1.41" }
ethnum = "^1.5.2"
zeroize = "^1.8.0"

serde = { version = "^1.0.219", features = ["derive", "rc"] }
serde_bytes = { version = "^0.11.17" }
serde_json = { version = "^1.0.140" }
fake = { version = "^2.10.0", features = ["derive"] }
paste = "1.0.15"
# proptest 1.7.0+ rely on rand 0.9.0, which we are not yet updating to.
proptest = { version = "~1.6.0", optional = true }
proptest-derive = { version = "0.5", optional = true }

[dev-dependencies]
midnight-base-crypto = { path = ".", features = ["proptest"] }
actix-rt = "^2.10.0"
rand_chacha = "^0.3.1"
