[package]
name = "midnight-coin-structure"
version = "1.0.0-alpha.4"
edition = "2024"
license.workspace = true

[features]
proptest = ["dep:proptest", "dep:proptest-derive", "storage/proptest", "transient-crypto/proptest", "serialize/proptest"]

[dependencies]
serialize = { path = "../serialize", package = "midnight-serialize" }
storage = { path = "../storage", package = "midnight-storage" }
base-crypto = { path = "../base-crypto", package = "midnight-base-crypto" }
transient-crypto = { path = "../transient-crypto", package = "midnight-transient-crypto" }

lazy_static = "^1.5.0"
# rand 0.9.0 is not yet supported by some of our dependencies, we will
# stick with 0.8.0 for now.
rand = { version = "^0.8.4", features = ["getrandom"] }
zeroize = "^1.8.0"

serde = { version = "^1.0.219", features = ["derive", "rc"] }
fake = { version = "^2.10.0", features = ["derive"] }
# proptest 1.7.0+ rely on rand 0.9.0, which we are not yet updating to.
proptest = { version = "~1.6.0", optional = true }
proptest-derive = { version = "0.5", optional = true }

[dev-dependencies]
midnight-coin-structure = { path = ".", features = ["proptest"] }
rand = { version = "^0.8.4", features = ["getrandom"] }
paste = "1.0.15"
