[package]
name = "midnight-coin-structure"
version = "2.0.1"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Describes low-level address format and shielded token representations for Midnight."

[features]
proptest = ["dep:proptest", "dep:proptest-derive", "storage/proptest", "transient-crypto/proptest", "serialize/proptest"]

[dependencies]
serialize = { version = "1.0.0", path = "../serialize", package = "midnight-serialize" }
storage = { version = "1.0.0", path = "../storage-core", package = "midnight-storage-core" }
base-crypto = { version = "1.0.0", path = "../base-crypto", package = "midnight-base-crypto" }
transient-crypto = { version = "2.0.0", path = "../transient-crypto", package = "midnight-transient-crypto" }

lazy_static = "^1.5.0"
# rand 0.9.0 is not yet supported by some of our dependencies, we will
# stick with 0.8.0 for now.
rand = { version = "^0.8.4", features = ["getrandom"] }
zeroize = "^1.8.0"

serde = { version = "^1.0.219", features = ["derive", "rc"] }
fake = { version = "^2.10.0", features = ["derive"] }
# proptest 1.7.0+ rely on rand 0.9.0, which we are not yet updating to.
proptest = { version = "~1.6.0", optional = true }
proptest-derive = { version = "0.5", optional = true }

[dev-dependencies]
midnight-coin-structure = { path = ".", features = ["proptest"] }
rand = { version = "^0.8.4", features = ["getrandom"] }
pastey = "0.1.1"
