[package]
name = "midnight-ledger-wasm"
version = "6.1.0-alpha.4"
license.workspace = true
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
zswap = { path = "../zswap", package = "midnight-zswap" }
ledger = { path = "../ledger", package = "midnight-ledger", default-features = false }
onchain-runtime-wasm = { path = "../onchain-runtime-wasm", package = "midnight-onchain-runtime-wasm" }
onchain-runtime = { path = "../onchain-runtime", package = "midnight-onchain-runtime" }
storage = { path = "../storage", package = "midnight-storage" }
serialize = { path = "../serialize", package = "midnight-serialize" }
coin-structure = { path = "../coin-structure", package = "midnight-coin-structure" }
base-crypto = { path = "../base-crypto", package = "midnight-base-crypto" }
transient-crypto = { path = "../transient-crypto", package = "midnight-transient-crypto" }

# rand 0.9.0 is not yet supported by some of our dependencies, we will
# stick with 0.8.0 for now.
rand = { version = "^0.8.4", features = ["getrandom"] }
rand_chacha = "^0.3.1"
getrandom = { version = "^0.2.16", features = ["js"] }
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "^0.4.50"
serde = "^1.0.219"
serde_bytes = "^0.11.17"
serde-wasm-bindgen = "^0.6.5"
js-sys = "^0.3.77"
hex = "^0.4.3"
paste = "^1.0.15"
anyhow = { version = "^1.0.61" }
zeroize = "^1.8.0"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O', '--enable-reference-types', '-g']

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-reference-types']
