[package]
name = "midnight-onchain-runtime-wasm"
version = "1.0.0-alpha.4"
edition = "2024"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
onchain-runtime = { path = "../onchain-runtime", package = "midnight-onchain-runtime" }
serialize = { path = "../serialize", package = "midnight-serialize" }
storage = { path = "../storage", package = "midnight-storage" }
transient-crypto = { path = "../transient-crypto", package = "midnight-transient-crypto" }
base-crypto = { path = "../base-crypto", package = "midnight-base-crypto" }
coin-structure = { path = "../coin-structure", package = "midnight-coin-structure" }

# rand 0.9.0 is not yet supported by some of our dependencies, we will
# stick with 0.8.0 for now.
rand = { version = "^0.8.4", features = ["getrandom"] }
getrandom = { version = "^0.2.16", features = ["js"] }
wasm-bindgen = "=0.2.100"
serde = "^1.0.219"
serde_bytes = "^0.11.17"
serde-wasm-bindgen = "^0.6.5"
js-sys = "^0.3.77"
hex = "^0.4.3"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O', '--enable-reference-types', '-g']

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-reference-types']
