[package]
name = "midnight-onchain-runtime"
version = "1.0.0-alpha.4"
edition = "2024"
license.workspace = true

[features]
default = ["vendored"]
vendored = []
proptest = ["dep:proptest", "dep:proptest-derive", "coin-structure/proptest", "onchain-runtime-state/proptest", "onchain-vm/proptest"]

[dependencies]
coin-structure = { path = "../coin-structure", package = "midnight-coin-structure" }
onchain-runtime-state = { path = "../onchain-state", package = "midnight-onchain-state" }
onchain-vm = { path = "../onchain-vm", package = "midnight-onchain-vm" }
storage = { path = "../storage", package = "midnight-storage" }
serialize = { path = "../serialize", package = "midnight-serialize" }
base-crypto = { path = "../base-crypto", package = "midnight-base-crypto" }
transient-crypto = { path = "../transient-crypto", package = "midnight-transient-crypto" }

derive-where = "^1.5.0"
enum_index = "^0.2.0"
enum_index_derive = "^0.2.0"

tracing = { version = "^0.1.41" }
lazy_static = "^1.5.0"
hex = "^0.4.3"
konst = "0.3.16"
# rand 0.9.0 is not yet supported by some of our dependencies, we will
# stick with 0.8.0 for now.
rand = { version = "^0.8.5", features = ["getrandom"] }

fake = { version = "^2.10.0", features = ["derive"] }
serde = { version = "^1.0.219", features = ["derive"] }
serde_bytes = { version = "^0.11.17" }
# proptest 1.7.0+ rely on rand 0.9.0, which we are not yet updating to.
proptest = { version = "~1.6.0", optional = true }
proptest-derive = { version = "0.5", optional = true }

[dev-dependencies]
midnight-onchain-runtime = { path = ".", features = ["proptest"] }
rand = { version = "^0.8.5", features = ["getrandom"] }
criterion = "0.5"
paste = "1.0.15"
serde_json = { version = "^1.0", features = ["std"] }
itertools = "0.10"

[[bench]]
name = "benchmarking"
harness = false
