[package]
name = "midnight-onchain-runtime"
version = "2.0.1"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "The full smart contract runtime for Midnight's ledger."

[features]
default = ["vendored"]
vendored = []
proptest = ["dep:proptest", "dep:proptest-derive", "coin-structure/proptest", "onchain-runtime-state/proptest", "onchain-vm/proptest"]

[dependencies]
coin-structure = { version = "2.0.0", path = "../coin-structure", package = "midnight-coin-structure" }
onchain-runtime-state = { version = "2.0.0", path = "../onchain-state", package = "midnight-onchain-state" }
onchain-vm = { version = "1.0.0", path = "../onchain-vm", package = "midnight-onchain-vm" }
storage = { version = "1.0.0", path = "../storage", package = "midnight-storage" }
serialize = { version = "1.0.0", path = "../serialize", package = "midnight-serialize" }
base-crypto = { version = "1.0.0", path = "../base-crypto", package = "midnight-base-crypto" }
transient-crypto = { version = "2.0.0", path = "../transient-crypto", package = "midnight-transient-crypto" }

derive-where = "^1.5.0"
enum_index = "^0.2.0"
enum_index_derive = "^0.2.0"

tracing = { version = "^0.1.41" }
lazy_static = "^1.5.0"
hex = "^0.4.3"
konst = "0.3.16"
# rand 0.9.0 is not yet supported by some of our dependencies, we will
# stick with 0.8.0 for now.
rand = { version = "^0.8.5", features = ["getrandom"] }

fake = { version = "^2.10.0", features = ["derive"] }
serde = { version = "^1.0.219", features = ["derive"] }
serde_bytes = { version = "^0.11.17" }
# proptest 1.7.0+ rely on rand 0.9.0, which we are not yet updating to.
proptest = { version = "~1.6.0", optional = true }
proptest-derive = { version = "0.5", optional = true }

[dev-dependencies]
midnight-onchain-runtime = { path = ".", features = ["proptest"] }
rand = { version = "^0.8.5", features = ["getrandom"] }
criterion = "0.5"
pastey = "0.1.1"
serde_json = { version = "^1.0", features = ["std"] }
itertools = "0.10"

[[bench]]
name = "benchmarking"
harness = false
