[package]
name = "midnight-serialize-macros"
version = "1.0.0-alpha.4"
edition = "2024"
description = "Derive macros for `midnight-serialize`."
license.workspace = true
repository = "https://github.com/midnightntwrk/midnight-ledger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "^2.0"
quote = "^1.0"
proc-macro2 = "1"

[lib]
proc-macro = true
