[package]
name = "midnight-serialize-macros"
version = "1.0.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Derive macros for `midnight-serialize`, a serialization crate for the Midnight blockchain."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "^2.0"
quote = "^1.0"
proc-macro2 = "1"

[lib]
proc-macro = true
